--- a/Salongeschichten/index.html
+++ b/Salongeschichten/index.html
@@ -5,7 +5,12 @@
 <head prefix="og: http://ogp.me/ns#">
 
 	<title></title> <!--Up to 60-70 Characters. Optimal Format: Primary Keyword - Secondary Keyword | Brand Name-->
-
+	<link href="https://fonts.googleapis.com/css?family=IM+Fell+English:400,400i" rel="stylesheet">
+	<style>
+		body {
+			font-family: 'IM Fell English', serif;
+			}
+	</style>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
 	<meta name="description" content=""> <!--Page description. No longer than 155 characters.-->
@@ -161,9 +166,13 @@
 			</div>
 		</div>
 
-		<div data-ui="choices" class="vertical align-center middle"></div>
-		<div data-ui="text">
+		<div data-ui="gesicht" class="vertical align-center middle">
 			<img data-ui="face" alt="">
+		</div>
+
+		<div data-ui="choices" class="vertical align-center middle"></div>
+
+		<div data-ui="text">
 			<span data-ui="who"></span>
 			<p data-ui="say"></p>
 		</div>
