--- a/Salongeschichten/index.html
+++ b/Salongeschichten/index.html
@@ -202,7 +202,7 @@
 			<button data-action="start" data-string="Start">Start</button>
 			<button data-action="open-menu" data-open="load" data-string="Load">Spielstand laden</button>
 			<button data-action="open-menu" data-open="settings" data-string="Settings">Einstellungen</button>
-			<button data-action="open-menu" data-open="Info" data-string="Help">Hilfe</button>
+			<button data-action="open-menu" data-open="help" data-string="Help">Hilfe</button>
 			<button data-action="open-menu" data-open="Info" data-string="Info">Info</button>
 			<button data-action="open-menu" data-open="impressum" data-string="Impressum">Quellen</button>
 		</div>
